--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,9 +1,9 @@
 .button {
   font: inherit;
-  border: 1px solid #4f005f;
-  background: #4f005f;
+  border: 1px solid teal;
+  background: teal;
   color: white;
-  padding: 0.75rem 3.5rem;
+  padding: 0.75rem 1rem;
   cursor: pointer;
   font-size: 1.15rem;
   border-radius: 30px;
@@ -11,8 +11,8 @@
 
 .button:hover,
 .button:active {
-  background: #741188;
-  border-color: #741188;
+  background: rgb(2, 72, 72);
+  border-color:rgb(2, 72, 72);
 }
 
 .button:focus {
